<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TutorialFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/quiz_story_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/edge"
        android:lineSpacingMultiplier="1.5"
        android:padding="@dimen/middle_padding"
        android:paddingLeft="@dimen/middle_padding"
        android:paddingTop="@dimen/middle_padding"
        android:paddingRight="@dimen/middle_padding"
        android:paddingBottom="@dimen/middle_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/story_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tutorial_temporary" />

    <ImageView
        android:id="@+id/doctor_image"
        android:layout_width="148dp"
        android:layout_height="159dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doctor_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/doctor_name"
        android:textColor="@color/black"
        android:textSize="@dimen/story_text_size"
        app:layout_constraintEnd_toEndOf="@+id/doctor_image"
        app:layout_constraintStart_toStartOf="@+id/doctor_image"
        app:layout_constraintTop_toBottomOf="@+id/doctor_image" />

    <Button
        android:id="@+id/next_button2"
        style="@style/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_story_text"
        app:layout_constraintEnd_toEndOf="@+id/quiz_story_text" />

    <Button
        android:id="@+id/prev_button"
        style="@style/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="prev"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_story_text"
        app:layout_constraintStart_toStartOf="@+id/quiz_story_text" />

    <Button
        android:id="@+id/next_button3"
        style="@style/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/game_start"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_story_text"
        app:layout_constraintVertical_bias="0.7"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>